add calendar selection and display to Web

--- a/Mduchesneau.Scheduled.Web/Mduchesneau.Scheduled.Web.csproj
+++ b/Mduchesneau.Scheduled.Web/Mduchesneau.Scheduled.Web.csproj
@@ -61,6 +61,139 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\.gitattributes" />
+    <Content Include="bower_components\angular-ui-bootstrap\.gitignore" />
+    <Content Include="bower_components\angular-ui-bootstrap\docs\css\style.css" />
+    <Content Include="bower_components\angular-ui-bootstrap\docs\nav.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\Gruntfile.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\karma.conf.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\app.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\demo.css" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\github-16px.png" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\header.png" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\img\glyphicons-halflings-white.png" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\img\glyphicons-halflings.png" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\plunker.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\rainbow-generic.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\rainbow-html.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\rainbow-javascript.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\rainbow.css" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\rainbow.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\smoothscroll-angular-custom.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\assets\uglifyjs.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\demo\index.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\raw-files-generator.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\test-lib\angular-mocks.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\test-lib\angular.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\test-lib\helpers.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\test-lib\jquery-1.8.2.min.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\validate-commit-msg.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\accordion\accordion.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\accordion\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\accordion\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\accordion\test\accordion.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\alert\alert.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\alert\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\alert\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\alert\test\alert.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\alert\test\dismissOnTimeout.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\bindHtml\bindHtml.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\buttons\buttons.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\buttons\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\buttons\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\buttons\test\buttons.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\carousel\carousel.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\carousel\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\carousel\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\carousel\test\carousel.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\collapse\collapse.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\collapse\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\collapse\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\collapse\test\collapse.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\dateparser\dateparser.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\dateparser\test\dateparser.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\datepicker\datepicker.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\datepicker\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\datepicker\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\datepicker\test\datepicker.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\dropdown\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\dropdown\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\dropdown\dropdown.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\dropdown\test\dropdown.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\modal\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\modal\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\modal\modal.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\modal\test\modal.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\modal\test\modalWindow.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\modal\test\stackedMap.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\pagination\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\pagination\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\pagination\pagination.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\pagination\test\pager.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\pagination\test\pagination.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\popover\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\popover\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\popover\popover.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\popover\test\popover.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\position\position.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\position\test\position.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\position\test\test.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\progressbar\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\progressbar\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\progressbar\progressbar.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\progressbar\test\progressbar.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\rating\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\rating\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\rating\rating.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\rating\test\rating.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tabs\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tabs\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tabs\tabs.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tabs\test\tabs.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\timepicker\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\timepicker\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\timepicker\test\timepicker.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\timepicker\timepicker.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tooltip\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tooltip\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tooltip\test\tooltip.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tooltip\test\tooltip2.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tooltip\tooltip.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\transition\test\transition.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\transition\transition.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\typeahead\docs\demo.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\typeahead\docs\demo.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\typeahead\test\typeahead-highlight.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\typeahead\test\typeahead-parser.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\typeahead\test\typeahead-popup.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\typeahead\test\typeahead.spec.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\typeahead\typeahead.js" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\accordion\accordion-group.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\accordion\accordion.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\alert\alert.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\carousel\carousel.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\carousel\slide.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\datepicker\datepicker.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\datepicker\day.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\datepicker\month.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\datepicker\popup.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\datepicker\year.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\modal\backdrop.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\modal\window.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\pagination\pager.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\pagination\pagination.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\popover\popover.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\progressbar\bar.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\progressbar\progress.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\progressbar\progressbar.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\rating\rating.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\tabs\tab.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\tabs\tabset.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\timepicker\timepicker.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\tooltip\tooltip-html-unsafe-popup.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\tooltip\tooltip-popup.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\typeahead\typeahead-match.html" />
+    <Content Include="bower_components\angular-ui-bootstrap\template\typeahead\typeahead-popup.html" />
     <Content Include="bower_components\angular-ui-calendar\src\calendar.js" />
     <Content Include="bower_components\angular\angular-csp.css" />
     <Content Include="bower_components\angular\angular.js" />
@@ -1030,6 +1163,7 @@
     <Content Include="modules\schedule-calendar.js" />
     <Content Include="modules\schedule-api.js" />
     <Content Include="styles\scheduled.css" />
+    <Content Include="templates\calendar-select.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -1077,6 +1211,33 @@
     <Content Include="bower_components\bootstrap-css\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="bower_components\bootstrap-css\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="bower_components\bootstrap-css\README.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\.bower.json" />
+    <Content Include="bower_components\angular-ui-bootstrap\.editorconfig" />
+    <Content Include="bower_components\angular-ui-bootstrap\.jshintrc" />
+    <Content Include="bower_components\angular-ui-bootstrap\.travis.yml" />
+    <Content Include="bower_components\angular-ui-bootstrap\CHANGELOG.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\CONTRIBUTING.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\LICENSE" />
+    <Content Include="bower_components\angular-ui-bootstrap\misc\changelog.tpl.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\package.json" />
+    <Content Include="bower_components\angular-ui-bootstrap\README.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\ROADMAP.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\accordion\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\alert\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\buttons\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\carousel\docs\README.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\collapse\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\datepicker\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\dropdown\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\modal\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\pagination\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\popover\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\progressbar\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\rating\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tabs\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\timepicker\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\tooltip\docs\readme.md" />
+    <Content Include="bower_components\angular-ui-bootstrap\src\typeahead\docs\readme.md" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
