--- a/Mduchesneau.Scheduled.Web/bower.json
+++ b/Mduchesneau.Scheduled.Web/bower.json
@@ -18,6 +18,7 @@
     "fullcalendar": "~2.3.1",
     "angular-ui-calendar": "latest",
     "moment": "~2.9.0",
-    "bootstrap-css": "~3.2.0"
+    "bootstrap-css": "~3.2.0",
+    "angular-ui-bootstrap": "~0.12.1"
   }
 }
